// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichText /> should render editable value if present 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      undefined,
    ]
  }
  testID="html"
>
  <View
    style={
      Array [
        Object {},
        undefined,
        undefined,
      ]
    }
    testID="body"
  >
    <View
      style={
        Array [
          Object {
            "marginBottom": 14,
            "marginTop": 14,
          },
          undefined,
          undefined,
        ]
      }
      testID="p"
    >
      <Text
        allowFontScaling={true}
        selectable={false}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            undefined,
            undefined,
          ]
        }
      >
        this value should be rendered ©
      </Text>
    </View>
  </View>
</View>
`;

exports[`<RichText /> should render nothing with missing editable and value 1`] = `null`;

exports[`<RichText /> should render nothing with missing field 1`] = `null`;

exports[`<RichText /> should render other attributes with other props provided 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
      undefined,
    ]
  }
  testID="html"
>
  <View
    style={
      Array [
        Object {},
        undefined,
        undefined,
      ]
    }
    testID="body"
  >
    <Text
      allowFontScaling={true}
      selectable={false}
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          undefined,
          undefined,
        ]
      }
    >
      value with
    </Text>
    <View
      style={
        Array [
          Object {
            "marginBottom": 14,
            "marginTop": 14,
          },
          undefined,
          undefined,
        ]
      }
      testID="p"
    >
      <Text
        allowFontScaling={true}
        selectable={false}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            undefined,
            undefined,
          ]
        }
      >
        markup
      </Text>
    </View>
  </View>
</View>
`;

exports[`<RichText /> should render value if editable is undefined 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
      undefined,
    ]
  }
  testID="html"
>
  <View
    style={
      Array [
        Object {},
        undefined,
        undefined,
      ]
    }
    testID="body"
  >
    <Text
      allowFontScaling={true}
      selectable={false}
      style={
        Array [
          Object {
            "fontSize": 14,
          },
          undefined,
          undefined,
        ]
      }
    >
      this value should be rendered
    </Text>
  </View>
</View>
`;
